Update doc generation script
doc gen script was updated with required arguments to generate
wso2 rest api docs. Debugging arguments were also added.